src/objects/Fielo_ItemVenta__c.object
<CustomObject>
    <fields>
        <fullName>F_Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_IdProducto__c</fullName>
        <label>Id Producto</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_ValorTotal__c</fullName>
        <formula>F_Cantidad__c  *  F_ValorUnitario__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_ValorUnitario__c</fullName>
        <label>Valor Unitario</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_Venta__c</fullName>
        <label>Venta</label>
        <referenceTo>Fielo_Venta__c</referenceTo>
        <relationshipLabel>Itens de Venda</relationshipLabel>
        <relationshipName>Itens_de_Venda</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Item Venta</label>
    <nameField>
        <displayFormat>IV-{0000000000}</displayFormat>
        <label># Item Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items de Venta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>